docs: Fix swagger security doc
