# api/lang/controller.go
@@ -27,6 +27,7 @@ func (c *Controller) FindAll(ctx *fiber.Ctx) error {
 
 // Create a lang
 // @Tags     langs
+// @Security ApiKeyAuth
 // @Success  200   {object}  model.Lang
 // @Failure  409   {object}  api.JSONError
 // @Failure  500   {object}  api.JSONError
@@ -55,6 +56,7 @@ func (c *Controller) Create(ctx *fiber.Ctx) error {
 
 // Update a lang
 // @Tags     langs
+// @Security ApiKeyAuth
 // @Success  200      {object}  model.Lang
 // @Failure  404      {object}  api.JSONError
 // @Failure  500      {object}  api.JSONError
@@ -75,6 +77,7 @@ func (c *Controller) Update(ctx *fiber.Ctx) error {
 
 // Delete a lang
 // @Tags     langs
+// @Security ApiKeyAuth
 // @Success  200      {object}  api.JSONMessage
 // @Failure  404      {object}  api.JSONError
 // @Failure  500      {object}  api.JSONError
